--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/stack": "^5.2.13",
     "@use-expo/font": "^2.0.0",
     "expo": "^37.0.8",
+    "faker": "^4.1.0",
     "lottie-react-native": "~2.6.1",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
