--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^2.2.6",
-    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^5.2.7",
     "@react-navigation/native": "^5.1.6",
     "@react-navigation/stack": "^5.2.13",
     "@use-expo/font": "^2.0.0",
     "expo": "^41.0.0",
-    "expo-linear-gradient": "~9.1.0",
+    "expo-linear-gradient": "^9.1.0",
     "faker": "^4.1.0",
     "lottie-react-native": "3.5.0",
     "react": "16.13.1",
@@ -26,6 +26,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-shimmer-placeholder": "git+https://github.com/tomzaku/react-native-shimmer-placeholder.git#expo",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.1.1"
   },
